--- a/index.html
+++ b/index.html
@@ -534,30 +534,30 @@
              class="btn btn-outline-light btn-floating m-1"
              class="text-white"
              role="button"
-              href="mailto: blal.mhamed.b1@gmail.com"><i class="fab fa-google"></i
-            target="_blank"></a>
+              href="mailto: blal.mhamed.b1@gmail.com"target="_blank"><i class="fab fa-google"></i
+            ></a>
         
           <!-- Instagram -->
           <a
              class="btn btn-outline-light btn-floating m-1"
              class="text-white"
              role="button"
-              href="https://www.instagram.com/blal_929?igsh=OGQ5ZDc2ODk2ZA=="><i class="fab fa-instagram"></i
-            target="_blank"></a>
+              href="https://www.instagram.com/blal_929?igsh=OGQ5ZDc2ODk2ZA=="target="_blank"><i class="fab fa-instagram"></i
+            ></a>
           <!-- linkedin -->
           <a
              class="btn btn-outline-light btn-floating m-1"
              class="text-white"
              role="button"
-             href="https://www.linkedin.com/in/belal-mohamed-%E2%80%8C%E2%80%8C-5813402a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i
-           target="_blank" ></a>
+             href="https://www.linkedin.com/in/belal-mohamed-%E2%80%8C%E2%80%8C-5813402a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"target="_blank"><i class="fab fa-linkedin"></i
+           " ></a>
           <!-- whatsapp -->
           <a
              class="btn btn-outline-light btn-floating m-1"
              class="text-white"
              role="button"
-            href="https://wa.me/+0201007523178"><i class="fab fa-whatsapp"></i
-            target="_blank"></a>
+            href="https://wa.me/+0201007523178"target="_blank"><i class="fab fa-whatsapp"></i
+            "></a>
         </div>
       </section>
     </div>
